# icra18-fci-tutorial

./: README.md
icra18/: CMakeLists.txt  icra18_controllers.xml  package.xml
icra18/cfg/: plug_in_params.cfg
icra18/config/: controllers.yaml  demo.yaml  hdmi.yaml  power.yaml  usb.yaml  vga.yaml
icra18/launch/: demo.launch  plug_in_controller.launch  teaching.launch
icra18/scripts/: demo.py  teaching.py
icra18/src/: model_example_controller.cpp  model_example_controller.h  plug_in_controller.cpp  plug_in_controller.h
