<?xml version="1.0"?>
<package format="2">
  <name>icra18</name>
  <version>0.0.0</version>
  <description>Demo code for ICRA 2018</description>

  <maintainer email="jose.medina@franka.de">Jose Medina</maintainer>
  <maintainer email="florian.walch@franka.de">Florian Walch</maintainer>

  <license>UNLICENSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/icra18_controllers.xml"/>
  </export>
</package>
